@@ -18,15 +18,21 @@
     <main.verticle>github.benslabbert.vdnative.verticle.MainVerticle</main.verticle>
     <mainClass>${main.class}</mainClass>
     <mainVerticle>${main.verticle}</mainVerticle>
+    <shade.skip>false</shade.skip>
+    <argLine />
 
     <slf4j.version>2.0.17</slf4j.version>
     <logback.version>1.5.20</logback.version>
+    <mockito.version>5.20.0</mockito.version>
     <dagger.version>2.57.2</dagger.version>
     <vertx.version>5.0.5</vertx.version>
     <maven-shade-plugin.version>3.6.1</maven-shade-plugin.version>
     <spotless.version>3.0.0</spotless.version>
     <errorprone.version>2.43.0</errorprone.version>
     <maven-compiler-plugin.version>3.14.1</maven-compiler-plugin.version>
+    <maven-surefire-plugin.version>3.5.4</maven-surefire-plugin.version>
+    <maven-failsafe-plugin.version>3.5.4</maven-failsafe-plugin.version>
+    <maven-dependency-plugin.version>3.9.0</maven-dependency-plugin.version>
 
     <pgo.file.path>default.iprof</pgo.file.path>
   </properties>
@@ -37,6 +43,13 @@
         <groupId>io.vertx</groupId>
         <artifactId>vertx-stack-depchain</artifactId>
         <version>${vertx.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.mockito</groupId>
+        <artifactId>mockito-bom</artifactId>
+        <version>${mockito.version}</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
@@ -76,9 +89,43 @@
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
     </dependency>
+    <dependency>
+      <groupId>io.vertx</groupId>
+      <artifactId>vertx-junit5</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <version>${maven-compiler-plugin.version}</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-dependency-plugin</artifactId>
+          <version>${maven-dependency-plugin.version}</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-failsafe-plugin</artifactId>
+          <version>${maven-failsafe-plugin.version}</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>${maven-surefire-plugin.version}</version>
+        </plugin>
+      </plugins>
+    </pluginManagement>
     <plugins>
       <plugin>
         <groupId>com.diffplug.spotless</groupId>
@@ -134,7 +181,6 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>${maven-compiler-plugin.version}</version>
         <configuration>
           <useIncrementalCompilation>false</useIncrementalCompilation>
           <source>${java.version}</source>
@@ -145,8 +191,11 @@
           <compilerArgs>
             <arg>-parameters</arg>
             <!--dagger-->
-            <arg>-Adagger.fastInit=enabled</arg>
-            <arg>-Adagger.formatGeneratedSource=enabled</arg>
+            <arg>-Adagger.fastInit=ENABLED</arg>
+            <arg>-Adagger.formatGeneratedSource=ENABLED</arg>
+            <arg>-Adagger.useBindingGraphFix=ENABLED</arg>
+            <arg>-Adagger.fullBindingGraphValidation=ERROR</arg>
+            <arg>-Adagger.ignoreProvisionKeyWildcards=ENABLED</arg>
             <!--errorprone-->
             <arg>-XDcompilePolicy=simple</arg>
             <arg>--should-stop=ifError=FLOW</arg>
@@ -168,6 +217,34 @@
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-dependency-plugin</artifactId>
+        <executions>
+          <execution>
+            <goals>
+              <goal>properties</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-failsafe-plugin</artifactId>
+        <executions>
+          <execution>
+            <goals>
+              <goal>integration-test</goal>
+              <goal>verify</goal>
+            </goals>
+            <configuration>
+              <forkCount>1C</forkCount>
+              <reuseForks>true</reuseForks>
+              <argLine>@{argLine} --add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED --add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED --add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED --add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED --add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED --add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED --add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED -javaagent:${org.mockito:mockito-core:jar}</argLine>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-shade-plugin</artifactId>
         <version>${maven-shade-plugin.version}</version>
         <executions>
@@ -176,6 +253,7 @@
               <goal>shade</goal>
             </goals>
             <configuration>
+              <skip>${shade.skip}</skip>
               <finalName>${finalName}-uber</finalName>
               <transformers>
                 <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
@@ -191,6 +269,15 @@
             </configuration>
           </execution>
         </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <forkCount>1C</forkCount>
+          <reuseForks>true</reuseForks>
+          <argLine>@{argLine} --add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED --add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED --add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED --add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED --add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED --add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED --add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED -javaagent:${org.mockito:mockito-core:jar}</argLine>
+        </configuration>
       </plugin>
     </plugins>
   </build>
@@ -263,9 +350,9 @@
               <mainClass>${mainClass}</mainClass>
               <imageName>main</imageName>
               <verbose>true</verbose>
-              <quickBuild>true</quickBuild>
+              <quickBuild>false</quickBuild>
               <fallback>false</fallback>
-              <skipNativeTests>true</skipNativeTests>
+              <skipNativeTests>false</skipNativeTests>
               <debug>true</debug>
               <agent>
                 <enabled>true</enabled>
@@ -318,7 +405,7 @@
               <mainClass>${mainClass}</mainClass>
               <imageName>main</imageName>
               <verbose>true</verbose>
-              <quickBuild>true</quickBuild>
+              <quickBuild>false</quickBuild>
               <fallback>false</fallback>
               <skipNativeTests>true</skipNativeTests>
               <debug>true</debug>
